--- a/HW1.tex
+++ b/HW1.tex
@@ -1,4 +1,54 @@
-\documentclass{article}
+\documentclass{article}\usepackage[]{graphicx}\usepackage[]{xcolor}
+% maxwidth is the original width if it is less than linewidth
+% otherwise use linewidth (to make sure the graphics do not exceed the margin)
+\makeatletter
+\def\maxwidth{ %
+  \ifdim\Gin@nat@width>\linewidth
+    \linewidth
+  \else
+    \Gin@nat@width
+  \fi
+}
+\makeatother
+
+\definecolor{fgcolor}{rgb}{0.345, 0.345, 0.345}
+\newcommand{\hlnum}[1]{\textcolor[rgb]{0.686,0.059,0.569}{#1}}%
+\newcommand{\hlsng}[1]{\textcolor[rgb]{0.192,0.494,0.8}{#1}}%
+\newcommand{\hlcom}[1]{\textcolor[rgb]{0.678,0.584,0.686}{\textit{#1}}}%
+\newcommand{\hlopt}[1]{\textcolor[rgb]{0,0,0}{#1}}%
+\newcommand{\hldef}[1]{\textcolor[rgb]{0.345,0.345,0.345}{#1}}%
+\newcommand{\hlkwa}[1]{\textcolor[rgb]{0.161,0.373,0.58}{\textbf{#1}}}%
+\newcommand{\hlkwb}[1]{\textcolor[rgb]{0.69,0.353,0.396}{#1}}%
+\newcommand{\hlkwc}[1]{\textcolor[rgb]{0.333,0.667,0.333}{#1}}%
+\newcommand{\hlkwd}[1]{\textcolor[rgb]{0.737,0.353,0.396}{\textbf{#1}}}%
+\let\hlipl\hlkwb
+
+\usepackage{framed}
+\makeatletter
+\newenvironment{kframe}{%
+ \def\at@end@of@kframe{}%
+ \ifinner\ifhmode%
+  \def\at@end@of@kframe{\end{minipage}}%
+  \begin{minipage}{\columnwidth}%
+ \fi\fi%
+ \def\FrameCommand##1{\hskip\@totalleftmargin \hskip-\fboxsep
+ \colorbox{shadecolor}{##1}\hskip-\fboxsep
+     % There is no \\@totalrightmargin, so:
+     \hskip-\linewidth \hskip-\@totalleftmargin \hskip\columnwidth}%
+ \MakeFramed {\advance\hsize-\width
+   \@totalleftmargin\z@ \linewidth\hsize
+   \@setminipage}}%
+ {\par\unskip\endMakeFramed%
+ \at@end@of@kframe}
+\makeatother
+
+\definecolor{shadecolor}{rgb}{.97, .97, .97}
+\definecolor{messagecolor}{rgb}{0, 0, 0}
+\definecolor{warningcolor}{rgb}{1, 0, 1}
+\definecolor{errorcolor}{rgb}{1, 0, 0}
+\newenvironment{knitrout}{}{} % an empty environment to be redefined in TeX
+
+\usepackage{alltt}
 \usepackage[margin=1.0in]{geometry} % To set margins
 \usepackage{amsmath}  % This allows me to use the align functionality.
                       % If you find yourself trying to replicate
@@ -12,7 +62,7 @@
 \usepackage{float}    % For telling R where to put a table/figure
 \usepackage{natbib}        %For the bibliography
 \bibliographystyle{apalike}%For the bibliography
-
+\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 
 \begin{enumerate}
@@ -31,9 +81,13 @@
 \textbf{Solution:}
 % Note that I have added eval=FALSE so that it won't run
 % each time I compile
-<<eval=FALSE, size="scriptsize", warning=FALSE, message=FALSE>>=
-# install.packages("aRtsy")
-@
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# install.packages("aRtsy")}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % QUESTION 1b
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -41,10 +95,18 @@
   We need to load the library each time it is run.\\
 \textbf{Solution:}
 % Note here I have removed eval=FALSE so this code will run
-<<size="scriptsize", warning=FALSE, message=FALSE>>=
-install.packages("aRtsy")
-library("aRtsy")
-@
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{install.packages}\hldef{(}\hlsng{"aRtsy"}\hldef{)}
+\end{alltt}
+
+
+{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in contrib.url(repos, "{}source"{}): trying to use CRAN without setting a mirror}}\begin{alltt}
+\hlkwd{library}\hldef{(}\hlsng{"aRtsy"}\hldef{)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % QUESTION 1c
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -53,17 +115,22 @@ library("aRtsy")
  will find a link to a tutorial. Recreate the first figure they make using 
  \texttt{canvas\_collatz()}. Make sure to update the caption.\\
 \textbf{Solution:}
-<<CollatzPlot1, eval=FALSE, size="scriptsize", warning=FALSE, message=FALSE>>=
-help("aRtsy")
-set.seed(1)
-canvas_collatz(colors = colorPalette("blackwhite"))
-@
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{help}\hldef{(}\hlsng{"aRtsy"}\hldef{)}
+\hlkwd{set.seed}\hldef{(}\hlnum{1}\hldef{)}
+\hlkwd{canvas_collatz}\hldef{(}\hlkwc{colors} \hldef{=} \hlkwd{colorPalette}\hldef{(}\hlsng{"blackwhite"}\hldef{))}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
 %Code to insert a figure [H]ere
 \begin{figure}[H]
 \begin{center}
-<<echo=FALSE,fig.dim=c(4,4)>>=
-<<CollatzPlot1>>
-@
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-3-1} 
+\end{knitrout}
 \caption{Canvas collatz plot 1}
 \label{CollatzPlot1}
 \end{center}
@@ -75,17 +142,21 @@ canvas_collatz(colors = colorPalette("blackwhite"))
   numbers generated to create the plot. Can you see the difference? Make sure to 
   update the caption.\\
 \textbf{Solution:}
-<<CollatzPlot2, eval=FALSE, size="scriptsize", warning=FALSE, message=FALSE>>=
-set.seed(1313)
-canvas_collatz(colors = colorPalette("blackwhite"))
-
-@
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{set.seed}\hldef{(}\hlnum{1313}\hldef{)}
+\hlkwd{canvas_collatz}\hldef{(}\hlkwc{colors} \hldef{=} \hlkwd{colorPalette}\hldef{(}\hlsng{"blackwhite"}\hldef{))}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
 %Code to insert a figure [H]ere
 \begin{figure}[H]
 \begin{center}
-<<echo=FALSE,fig.dim=c(4,4)>>=
-<<CollatzPlot2>>
-@
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-4-1} 
+\end{knitrout}
 \caption{Canvas collatz plot 2}
 \label{CollatzPlot2}
 \end{center}
@@ -106,16 +177,21 @@ canvas_collatz(colors = colorPalette("blackwhite"))
   (note this is the default).
   \end{itemize}
 \textbf{Solution:}
-<<CollatzPlot3, eval=FALSE, size="scriptsize", warning=FALSE, message=FALSE>>=
-set.seed(1313)
-canvas_collatz(colors = colorPalette("vrolik4"), background="#dbdbdb", n=72, angle.even=0.0145, angle.odd=-0.05)
-@
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{set.seed}\hldef{(}\hlnum{1313}\hldef{)}
+\hlkwd{canvas_collatz}\hldef{(}\hlkwc{colors} \hldef{=} \hlkwd{colorPalette}\hldef{(}\hlsng{"vrolik4"}\hldef{),} \hlkwc{background}\hldef{=}\hlsng{"#dbdbdb"}\hldef{,} \hlkwc{n}\hldef{=}\hlnum{72}\hldef{,} \hlkwc{angle.even}\hldef{=}\hlnum{0.0145}\hldef{,} \hlkwc{angle.odd}\hldef{=}\hlopt{-}\hlnum{0.05}\hldef{)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
 %Code to insert a figure [H]ere
 \begin{figure}[H]
 \begin{center}
-<<echo=FALSE,fig.dim=c(4,4)>>=
-<<CollatzPlot3>>
-@
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-5-1} 
+\end{knitrout}
 \caption{Canvas collatz plot 3}
 \label{CollatzPlot3}
 \end{center}
@@ -128,17 +204,21 @@ canvas_collatz(colors = colorPalette("vrolik4"), background="#dbdbdb", n=72, ang
   Make sure that your code is well-formatted and your plot is appropriately scaled.\\
   \textbf{Solution:}
   
-<<CollatzPlot4, eval=FALSE, size="scriptsize", warning=FALSE, message=FALSE>>=
-set.seed(1313)
-canvas_collatz(colors = colorPalette("blossom"), background="#1e1e2f", n=300, angle.even=0.15, angle.odd=-0.1)
-
-@
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{set.seed}\hldef{(}\hlnum{1313}\hldef{)}
+\hlkwd{canvas_collatz}\hldef{(}\hlkwc{colors} \hldef{=} \hlkwd{colorPalette}\hldef{(}\hlsng{"blossom"}\hldef{),} \hlkwc{background}\hldef{=}\hlsng{"#1e1e2f"}\hldef{,} \hlkwc{n}\hldef{=}\hlnum{300}\hldef{,} \hlkwc{angle.even}\hldef{=}\hlnum{0.15}\hldef{,} \hlkwc{angle.odd}\hldef{=}\hlopt{-}\hlnum{0.1}\hldef{)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
 %Code to insert a figure [H]ere
 \begin{figure}[H]
 \begin{center}
-<<echo=FALSE,fig.dim=c(4,4)>>=
-<<CollatzPlot4>>
-@
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-6-1} 
+\end{knitrout}
 \caption{Canvas collatz plot 4}
 \label{CollatzPlot4}
 \end{center}
@@ -149,7 +229,6 @@ canvas_collatz(colors = colorPalette("blossom"), background="#1e1e2f", n=300, an
   \item Use \texttt{citation()} to get the BiBTeX citation for the \texttt{aRtsy}
   package and use \verb|\citep{}| to add a parenthetical citation to the end of
   the sentence below.
-  
 \textbf{Solution:} We created the generative art in Question 1 using the \texttt{aRtsy}
 package for \texttt{R} \citep{artsy}.
 \end{enumerate}
