--- a/HW1.tex
+++ b/HW1.tex
@@ -98,11 +98,6 @@
 \begin{knitrout}\scriptsize
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlkwd{install.packages}\hldef{(}\hlsng{"aRtsy"}\hldef{)}
-\end{alltt}
-
-
-{\ttfamily\noindent\bfseries\color{errorcolor}{\#\# Error in contrib.url(repos, "{}source"{}): trying to use CRAN without setting a mirror}}\begin{alltt}
 \hlkwd{library}\hldef{(}\hlsng{"aRtsy"}\hldef{)}
 \end{alltt}
 \end{kframe}
@@ -229,6 +224,7 @@
   \item Use \texttt{citation()} to get the BiBTeX citation for the \texttt{aRtsy}
   package and use \verb|\citep{}| to add a parenthetical citation to the end of
   the sentence below.
+  
 \textbf{Solution:} We created the generative art in Question 1 using the \texttt{aRtsy}
 package for \texttt{R} \citep{artsy}.
 \end{enumerate}
@@ -246,27 +242,88 @@ package for \texttt{R} \citep{artsy}.
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \item Create a numeric vector containing the integers from 0 to 10 inclusive. Hint -- the solution to this problem is one of these values.\\
 \textbf{Solution:}
+
+% Numeric vector from 0 to 10
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hldef{num.vec} \hlkwb{<-} \hlnum{0}\hlopt{:}\hlnum{10}
+\hldef{num.vec}
+\end{alltt}
+\begin{verbatim}
+##  [1]  0  1  2  3  4  5  6  7  8  9 10
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % QUESTION 2b
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \item Complete the algebra to compute $2^{x+1} +2^{x-1}$ for each value in the numerical vector created in step 1. Make sure to save the result to a new numeric vector.\\
 \textbf{Solution:}
+% Compute the expression for each value in num.vec
+
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hldef{results} \hlkwb{<-} \hlnum{2}\hlopt{^}\hldef{(num.vec}\hlopt{+}\hlnum{1}\hldef{)}\hlopt{+}\hlnum{2}\hlopt{^}\hldef{(num.vec}\hlopt{-}\hlnum{1}\hldef{)}
+\hldef{results}
+\end{alltt}
+\begin{verbatim}
+##  [1]    2.5    5.0   10.0   20.0   40.0   80.0  160.0  320.0  640.0 1280.0
+## [11] 2560.0
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % QUESTION 2c
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \item Use the which() function to ask which result is 40.\\
 \textbf{Solution:}
+
+% Use which to find which the index where the results are 40
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hldef{index.of.result.40} \hlkwb{<-} \hlkwd{which}\hldef{(results}\hlopt{==}\hlnum{40}\hldef{)}
+\hldef{index.of.result.40}
+\end{alltt}
+\begin{verbatim}
+## [1] 5
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % QUESTION 2d
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \item What is the solution? That is, what value of x yields $2^{x+1} +2^{x-1} = 40$?\\
 \textbf{Solution:}
+
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hldef{solution} \hlkwb{<-} \hldef{num.vec[index.of.result.40]}
+\hldef{solution}
+\end{alltt}
+\begin{verbatim}
+## [1] 4
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   % QUESTION 2e
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   \item Explain why this approach wouldn't work for something like $3^{x+2} + 5 (3^x) = 84$ where the solution is $x \approx 1.6309$.\\
 \textbf{Solution:}
+
+This approach only works when the solution is an integer because we are evaluating the equation for a strict set of integer values within the num.vec vector. For this example, this method would not find an exact solution since it does not evaluate any non-integer x values.
+
+
 \end{enumerate}
 \end{enumerate}
+
+\bibliography{bibliography.bib}
 
 \end{document}
